objects/Error__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Errors</relationshipLabel>
        <relationshipName>Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CACI__c</fullName>
        <externalId>true</externalId>
        <label>CACI</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAN__c</fullName>
        <externalId>true</externalId>
        <label>CAN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <label>Company Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Message__c</fullName>
        <label>Detail Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <description>Stores Error Code</description>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <description>Feature where the error has occured</description>
        <inlineHelpText>Feature where the error has occured</inlineHelpText>
        <label>Feature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAccountNameChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If account name changed then value of this field will be &apos;true&apos; else &apos;false&apos;</description>
        <label>IsAccountNameChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDCId__c</fullName>
        <externalId>true</externalId>
        <label>SFDCId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAI__c</fullName>
        <label>UAI</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CAN__c</columns>
        <columns>CACI__c</columns>
        <columns>UAI__c</columns>
        <columns>Account__c</columns>
        <columns>Error_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SFDCId__c</columns>
        <columns>Error_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Recent_Errors</fullName>
        <columns>NAME</columns>
        <columns>CAN__c</columns>
        <columns>CACI__c</columns>
        <columns>UAI__c</columns>
        <columns>Account__c</columns>
        <columns>Error_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SFDCId__c</columns>
        <columns>Error_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/27/2014 3:00 PM</value>
        </filters>
        <label>All Recent Errors</label>
    </listViews>
</CustomObject>